
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int i32 ;
typedef int fisier ;


 int fputc (int,int *) ;

void fwi32(fisier* F,i32 adr) {
           fputc(adr&0xff,F);
           fputc((adr>>8)&0xff,F);
           fputc((adr>>16)&0xff,F);
           fputc((adr>>24)&0xff,F);
    }
